# azure-covid-project

./: README.md  pyproject.toml
.github/workflows/: PySpark.yaml  feat-terraform_ci-cd_actions_covid-application.yml  terraform.yaml
Scripts/: PySpark_transformations.py
scripts/: casesdeaths_transformations.py  covidtests_transformations.py  experiments.py  hospital_transformations.py  population_transformation.py
tf/: HDInsight_transformation_test.tf  adb_snowflake_trans_casesdeaths.tf  adb_snowflake_trans_covidtests.tf  adb_snowflake_trans_hospital.tf  adb_snowflake_trans_population.tf  adf_dataflow.tf  adf_ecdc_ingestion.tf  adf_linkedservices.tf  adf_monitor_analytics.tf  adf_pipeline.tf  adf_pipeline_cases_death.tf  adf_pipeline_ecdc.tf  adf_pipeline_executions.tf  adf_pipeline_population.tf  adf_resources.tf  adf_template_deployment.tf  adf_transformation_cases_deaths.tf  adf_transformation_hospital.tf  adf_transformation_test.tf  adf_triggers.tf  budget_alert.tf  databricks.tf  databricks_resources.tf  locals.tf  logicapp.tf  main.tf  resources.tf  secrets.tfvars  sqlresources.tf  storage.tf  storages.tf  variables.tf
tf/templates/: adf_arm_template.json  adf_pipeline.json  adf_pipeline_cases_death_template.json  adf_pipeline_ecdc_template.json  adf_pipeline_ingest_ecdc.json  adf_pipeline_ingest_pop.json  adf_pipeline_transform_cases_deaths.json  adf_pipeline_transform_hospital.json  arm_pipeline_transform_tests.json  ecdc_file_list.json  logic_app_custom_email_notification.json
tf/templates/databricks_snowflake/: adf_pipeline_db_snowflake_casesdeaths.json  (+3 more)
(+2 files in other folders)
