[tool.poetry]
name = "azure-covid-project"
version = "0.1.0"
description = ""
authors = ["Moein"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.1"
pandas = "^1.4.2"
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
azure-storage-blob = "^12.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
